--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,14 @@ body {
   border-radius: 50px;
   cursor: pointer;
 }
+
+.linkNavNotActive {
+  transition: 0.3s ease;
+  color: white;
+  border-bottom: 3px solid transparent;
+}
+.linkNavNotActive.active {
+  border-bottom: 3px solid #29abe2;
+  border-bottom-left-radius: 5%;
+  border-bottom-right-radius: 5%;
+}
