--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,10 @@ body {
 ::-webkit-scrollbar {
   width: 5px;
   cursor: pointer;
+  background: #ffffff;
 }
 ::-webkit-scrollbar-thumb {
-  background: #e6d764;
+  background: #313131;
   border-radius: 50px;
   cursor: pointer;
 }
