responsiveness for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   font-family: "Gothic A1", sans-serif;
 }
 body {
+  height: 100%;
   overflow-x: hidden;
   background-color: rgb(75, 168, 245);
 }
